--- a/src/components/message-window/style.css
+++ b/src/components/message-window/style.css
@@ -25,5 +25,4 @@ header {
 
 main {
   position: relative;
-  overflow: scroll;
 }
